# hermit-localLLM

./: .gitattributes  .gitignore  Cargo.toml  README.md  rebuild_hermit.sh
.cargo/: config.toml
bitapp/: Cargo.toml  build.rs
bitapp/native/: bitapp_pthread_c.c  bitapp_runtime.cpp
bitapp/native/bitnet/: hermit_bitnet.cpp  hermit_bitnet.h
bitapp/src/: hermit_app.rs  main.rs
hermit-rs/examples/hello_world/: Cargo.toml
hermit-rs/examples/hello_world/src/: main.rs
hermit-rs/examples/hermit-wasm/src/: lib.rs  main.rs  preview1.rs
hermit-rs/hermit/: Cargo.toml  build.rs
hermit-rs/hermit/src/: lib.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: console.rs  console_log.rs  env.rs  lib.rs  logging.rs
kernel/src/drivers/: mod.rs  pci.rs
kernel/src/drivers/console/: font.rs  gop.rs
kernel/src/drivers/net/: mod.rs  rtl8152.rs  rtl8169.rs
kernel/src/drivers/storage/: ahci.rs  mod.rs
kernel/src/drivers/usb/: usb_msc.rs  xhci.rs
kernel/src/executor/: device.rs  mod.rs  network.rs
kernel/src/fd/: mod.rs  stdio.rs
kernel/src/mm/: device_alloc.rs  mod.rs  physicalmem.rs
kernel/src/scheduler/: mod.rs
kernel/src/syscalls/: mod.rs  processor.rs  tasks.rs
kernel/xtask/: Cargo.toml
kernel/xtask/src/: main.rs
loader/.cargo/: config.toml
loader/src/: fdt.rs
loader/xtask/: Cargo.toml
tools/: build-bitnet-hermit-static.sh  prepare-bitnet-q6k-embeddings.sh
usb-oxide/: .gitignore  Cargo.toml  LICENCE.md  README.md
usb-oxide/src/: desc.rs  dev.rs  err.rs  hid.rs  lib.rs  msc.rs  r8152.rs  ram.rs  reg.rs  ring.rs  xhci.rs
(+28 files in other folders)
